<resources>
    <string name="app_name">Jokenpo</string>
    <string name="button_title">Iniciar</string>
    <string name="player_screen_title">Jogador 1</string>
    <string name="menu_save_title">Salvar</string>
    <string name="menu_settings_title">Configurações</string>
    <string name="drawer_player_title">Jogador</string>
    <string name="drawer_result_title">Resultado</string>
    <string name="bottom_nav_title_1">Jogador 1</string>
    <string name="bottom_nav_title_2">Resultado</string>
    <string name="player_title">Jogador 1</string>
    <string name="result_title">Resultado</string>
    <string name="winner_title">O jogador xxx ganhou</string>
    <string name="select_player_text">Selecionar jogada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu_title">Home</string>
</resources>